feat: section services styles

--- a/index.html
+++ b/index.html
@@ -123,93 +123,105 @@
       </section>
       <section id="services">
         <h2>Serviços completos</h2>
-        <div class="service-item">
-          <div class="check">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 -960 960 960"
-              fill="#e3e3e3"
-            >
-              <path
-                d="m424-312 282-282-56-56-226 226-114-114-56 56 170 170ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"
-              />
-            </svg>
+        <div class="service-wrapper">
+          <div class="service-item">
+            <div class="check">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 -960 960 960"
+                fill="#e3e3e3"
+              >
+                <path
+                  d="m424-312 282-282-56-56-226 226-114-114-56 56 170 170ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"
+                />
+              </svg>
+            </div>
+            <div class="item">
+              <div class="title">Remoções 24 horas</div>
+              <div class="description">
+                Atendimento imediato em emergências médicas a qualquer hora do
+                dia ou da noite
+              </div>
+            </div>
           </div>
-          <div class="title">Remoções 24 horas</div>
-          <div class="description">
-            Atendimento imediato em emergências médicas a qualquer hora do dia
-            ou da noite
+          <div class="service-item">
+            <div class="check">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 -960 960 960"
+                fill="#e3e3e3"
+              >
+                <path
+                  d="m424-312 282-282-56-56-226 226-114-114-56 56 170 170ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"
+                />
+              </svg>
+            </div>
+            <div class="item">
+              <div class="title">Transporte Inter-hospitalar</div>
+              <div class="description">
+                Transferências seguras entre instituições de saúde com suporte
+                completo
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="service-item">
-          <div class="check">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 -960 960 960"
-              fill="#e3e3e3"
-            >
-              <path
-                d="m424-312 282-282-56-56-226 226-114-114-56 56 170 170ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"
-              />
-            </svg>
+          <div class="service-item">
+            <div class="check">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 -960 960 960"
+                fill="#e3e3e3"
+              >
+                <path
+                  d="m424-312 282-282-56-56-226 226-114-114-56 56 170 170ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"
+                />
+              </svg>
+            </div>
+            <div class="item">
+              <div class="title">Transferências Programadas</div>
+              <div class="description">
+                Transporte entre clínicas, residências e centros médicos para
+                consultas e procedimentos
+              </div>
+            </div>
           </div>
-          <div class="title">Transporte Inter-hospitalar</div>
-          <div class="description">
-            Transferências seguras entre instituições de saúde com suporte
-            completo
+          <div class="service-item">
+            <div class="check">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 -960 960 960"
+                fill="#e3e3e3"
+              >
+                <path
+                  d="m424-312 282-282-56-56-226 226-114-114-56 56 170 170ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"
+                />
+              </svg>
+            </div>
+            <div class="item">
+              <div class="title">Remoções de Longa Distância</div>
+              <div class="description">
+                Cobertura nacional com estrutura adequada para trajetos extensos
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="service-item">
-          <div class="check">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 -960 960 960"
-              fill="#e3e3e3"
-            >
-              <path
-                d="m424-312 282-282-56-56-226 226-114-114-56 56 170 170ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"
-              />
-            </svg>
-          </div>
-          <div class="title">Transferências Programadas</div>
-          <div class="description">
-            Transporte entre clínicas, residências e centros médicos para
-            consultas e procedimentos
-          </div>
-        </div>
-        <div class="service-item">
-          <div class="check">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 -960 960 960"
-              fill="#e3e3e3"
-            >
-              <path
-                d="m424-312 282-282-56-56-226 226-114-114-56 56 170 170ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"
-              />
-            </svg>
-          </div>
-          <div class="title">Remoções de Longa Distância</div>
-          <div class="description">
-            Cobertura nacional com estrutura adequada para trajetos extensos
-          </div>
-        </div>
-        <div class="service-item">
-          <div class="check">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 -960 960 960"
-              fill="#e3e3e3"
-            >
-              <path
-                d="m424-312 282-282-56-56-226 226-114-114-56 56 170 170ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"
-              />
-            </svg>
-          </div>
-          <div class="title">Cobertura de Eventos</div>
-          <div class="description">
-            Suporte médico especializado para eventos corporativos, esportivos e
-            sociais
+          <div class="service-item">
+            <div class="check">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 -960 960 960"
+                fill="#e3e3e3"
+              >
+                <path
+                  d="m424-312 282-282-56-56-226 226-114-114-56 56 170 170ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"
+                />
+              </svg>
+            </div>
+            <div class="item">
+              <div class="title">Cobertura de Eventos</div>
+              <div class="description">
+                Suporte médico especializado para eventos corporativos,
+                esportivos e sociais
+              </div>
+            </div>
           </div>
         </div>
       </section>
