feat: resolving conflicts

--- a/index.html
+++ b/index.html
@@ -33,193 +33,205 @@
         </ul>
       </nav>
     </header>
-    <main class="container">
+    <main>
       <section id="hero" class="">
-        <picture>
-          <source
-            media="(min-width: 768px)"
-            srcset="assets/images/hero-lg.jpeg"
-          />
-          <img src="assets/images/hero-sm.jpeg" alt="Descrição do hero image" />
-        </picture>
+        <div class="container">
+          <picture>
+            <source
+              media="(min-width: 768px)"
+              srcset="assets/images/hero-lg.jpeg"
+            />
+            <img
+              src="assets/images/hero-sm.jpeg"
+              alt="Descrição do hero image"
+            />
+          </picture>
+        </div>
       </section>
       <section id="mission">
-        <h2>Nossa Missão e Compromisso</h2>
-        <div class="mission-wrapper">
-          <div class="info">
-            <p>
-              Proporcionar atendimento humanizado e transporte seguro, com foco
-              absoluto na vida, saúde e bem-estar de cada paciente e sua
-              família. Entendemos que cada minuto faz diferença em situações
-              críticas.
-            </p>
-            <p>
-              Atuamos 24 horas por dia, 7 dias por semana, sempre prontos para
-              oferecer excelência técnica em remoções particulares,
-              hospitalares, clínicas, residências e longas distâncias.
-            </p>
+        <div class="container">
+          <h2>Nossa Missão e Compromisso</h2>
+          <div class="mission-wrapper">
+            <div class="info">
+              <p>
+                Proporcionar atendimento humanizado e transporte seguro, com
+                foco absoluto na vida, saúde e bem-estar de cada paciente e sua
+                família. Entendemos que cada minuto faz diferença em situações
+                críticas.
+              </p>
+              <p>
+                Atuamos 24 horas por dia, 7 dias por semana, sempre prontos para
+                oferecer excelência técnica em remoções particulares,
+                hospitalares, clínicas, residências e longas distâncias.
+              </p>
+            </div>
+            <img src="./assets/images/mission.jpg" class="hidden-xs" alt="" />
           </div>
-          <img src="./assets/images/mission.jpg" class="hidden-xs" alt="" />
         </div>
       </section>
       <section id="team">
-        <h2>Equipe Altamente Qualificada</h2>
-        <div class="team-wrapper">
-          <div class="card">
-            <span class="icon">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 -960 960 960"
-                fill="#e3e3e3"
-              >
-                <path
-                  d="M420-260h120v-100h100v-120H540v-100H420v100H320v120h100v100ZM280-120q-33 0-56.5-23.5T200-200v-440q0-33 23.5-56.5T280-720h400q33 0 56.5 23.5T760-640v440q0 33-23.5 56.5T680-120H280Zm0-80h400v-440H280v440Zm-40-560v-80h480v80H240Zm40 120v440-440Z"
-                />
-              </svg>
-            </span>
-            <h3>Enfermeiros Especializados</h3>
-            <p>
-              Profissionais experientes em emergências e cuidados intensivos,
-              preparados para qualquer situação
-            </p>
-          </div>
-          <div class="card">
-            <span class="icon">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 -960 960 960"
-                fill="#e3e3e3"
-              >
-                <path
-                  d="M480-320q102-92 131-129.5t29-74.5q0-36-26-62t-62-26q-21 0-40.5 8.5T480-580q-12-15-31-23.5t-41-8.5q-36 0-62 26t-26 62q0 19 5 35t22 37.5q17 21.5 48.5 52.5t84.5 79Zm0 240q-139-35-229.5-159.5T160-516v-244l320-120 320 120v244q0 152-90.5 276.5T480-80Zm0-84q104-33 172-132t68-220v-189l-240-90-240 90v189q0 121 68 220t172 132Zm0-316Z"
-                />
-              </svg>
-            </span>
-            <h3>Socorristas Treinados</h3>
-            <p>
-              Equipe capacitada em protocolos avançados de suporte à vida e
-              atendimento pré-hospitalar
-            </p>
-          </div>
-          <div class="card">
-            <span class="icon">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 -960 960 960"
-                fill="#e3e3e3"
-              >
-                <path
-                  d="M480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm-40-84v-120q-60-12-102-54t-54-102H164q12 109 89.5 185T440-164Zm80 0q109-12 186.5-89.5T796-440H676q-12 60-54 102t-102 54v120ZM164-520h116l120-120h160l120 120h116q-15-121-105-200.5T480-800q-121 0-211 79.5T164-520Z"
-                />
-              </svg>
-            </span>
-            <h3>Motoristas Especializados</h3>
-            <p>
-              Condutores experientes em transporte médico de urgência com
-              direção defensiva certificada
-            </p>
+        <div class="container">
+          <h2>Equipe Altamente Qualificada</h2>
+          <div class="team-wrapper">
+            <div class="card">
+              <span class="icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 -960 960 960"
+                  fill="#e3e3e3"
+                >
+                  <path
+                    d="M420-260h120v-100h100v-120H540v-100H420v100H320v120h100v100ZM280-120q-33 0-56.5-23.5T200-200v-440q0-33 23.5-56.5T280-720h400q33 0 56.5 23.5T760-640v440q0 33-23.5 56.5T680-120H280Zm0-80h400v-440H280v440Zm-40-560v-80h480v80H240Zm40 120v440-440Z"
+                  />
+                </svg>
+              </span>
+              <h3>Enfermeiros Especializados</h3>
+              <p>
+                Profissionais experientes em emergências e cuidados intensivos,
+                preparados para qualquer situação
+              </p>
+            </div>
+            <div class="card">
+              <span class="icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 -960 960 960"
+                  fill="#e3e3e3"
+                >
+                  <path
+                    d="M480-320q102-92 131-129.5t29-74.5q0-36-26-62t-62-26q-21 0-40.5 8.5T480-580q-12-15-31-23.5t-41-8.5q-36 0-62 26t-26 62q0 19 5 35t22 37.5q17 21.5 48.5 52.5t84.5 79Zm0 240q-139-35-229.5-159.5T160-516v-244l320-120 320 120v244q0 152-90.5 276.5T480-80Zm0-84q104-33 172-132t68-220v-189l-240-90-240 90v189q0 121 68 220t172 132Zm0-316Z"
+                  />
+                </svg>
+              </span>
+              <h3>Socorristas Treinados</h3>
+              <p>
+                Equipe capacitada em protocolos avançados de suporte à vida e
+                atendimento pré-hospitalar
+              </p>
+            </div>
+            <div class="card">
+              <span class="icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 -960 960 960"
+                  fill="#e3e3e3"
+                >
+                  <path
+                    d="M480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm-40-84v-120q-60-12-102-54t-54-102H164q12 109 89.5 185T440-164Zm80 0q109-12 186.5-89.5T796-440H676q-12 60-54 102t-102 54v120ZM164-520h116l120-120h160l120 120h116q-15-121-105-200.5T480-800q-121 0-211 79.5T164-520Z"
+                  />
+                </svg>
+              </span>
+              <h3>Motoristas Especializados</h3>
+              <p>
+                Condutores experientes em transporte médico de urgência com
+                direção defensiva certificada
+              </p>
+            </div>
           </div>
         </div>
       </section>
       <section id="services">
-        <h2>Serviços completos</h2>
-        <div class="service-wrapper">
-          <div class="service-item">
-            <div class="check">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 -960 960 960"
-                fill="#e3e3e3"
-              >
-                <path
-                  d="m424-312 282-282-56-56-226 226-114-114-56 56 170 170ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"
-                />
-              </svg>
-            </div>
-            <div class="item">
-              <div class="title">Remoções 24 horas</div>
-              <div class="description">
-                Atendimento imediato em emergências médicas a qualquer hora do
-                dia ou da noite
+        <div class="container">
+          <h2>Serviços completos</h2>
+          <div class="service-wrapper">
+            <div class="service-item">
+              <div class="check">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 -960 960 960"
+                  fill="#e3e3e3"
+                >
+                  <path
+                    d="m424-312 282-282-56-56-226 226-114-114-56 56 170 170ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"
+                  />
+                </svg>
+              </div>
+              <div class="item">
+                <div class="title">Remoções 24 horas</div>
+                <div class="description">
+                  Atendimento imediato em emergências médicas a qualquer hora do
+                  dia ou da noite
+                </div>
               </div>
             </div>
-          </div>
-          <div class="service-item">
-            <div class="check">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 -960 960 960"
-                fill="#e3e3e3"
-              >
-                <path
-                  d="m424-312 282-282-56-56-226 226-114-114-56 56 170 170ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"
-                />
-              </svg>
-            </div>
-            <div class="item">
-              <div class="title">Transporte Inter-hospitalar</div>
-              <div class="description">
-                Transferências seguras entre instituições de saúde com suporte
-                completo
+            <div class="service-item">
+              <div class="check">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 -960 960 960"
+                  fill="#e3e3e3"
+                >
+                  <path
+                    d="m424-312 282-282-56-56-226 226-114-114-56 56 170 170ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"
+                  />
+                </svg>
+              </div>
+              <div class="item">
+                <div class="title">Transporte Inter-hospitalar</div>
+                <div class="description">
+                  Transferências seguras entre instituições de saúde com suporte
+                  completo
+                </div>
               </div>
             </div>
-          </div>
-          <div class="service-item">
-            <div class="check">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 -960 960 960"
-                fill="#e3e3e3"
-              >
-                <path
-                  d="m424-312 282-282-56-56-226 226-114-114-56 56 170 170ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"
-                />
-              </svg>
-            </div>
-            <div class="item">
-              <div class="title">Transferências Programadas</div>
-              <div class="description">
-                Transporte entre clínicas, residências e centros médicos para
-                consultas e procedimentos
+            <div class="service-item">
+              <div class="check">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 -960 960 960"
+                  fill="#e3e3e3"
+                >
+                  <path
+                    d="m424-312 282-282-56-56-226 226-114-114-56 56 170 170ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"
+                  />
+                </svg>
+              </div>
+              <div class="item">
+                <div class="title">Transferências Programadas</div>
+                <div class="description">
+                  Transporte entre clínicas, residências e centros médicos para
+                  consultas e procedimentos
+                </div>
               </div>
             </div>
-          </div>
-          <div class="service-item">
-            <div class="check">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 -960 960 960"
-                fill="#e3e3e3"
-              >
-                <path
-                  d="m424-312 282-282-56-56-226 226-114-114-56 56 170 170ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"
-                />
-              </svg>
-            </div>
-            <div class="item">
-              <div class="title">Remoções de Longa Distância</div>
-              <div class="description">
-                Cobertura nacional com estrutura adequada para trajetos extensos
+            <div class="service-item">
+              <div class="check">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 -960 960 960"
+                  fill="#e3e3e3"
+                >
+                  <path
+                    d="m424-312 282-282-56-56-226 226-114-114-56 56 170 170ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"
+                  />
+                </svg>
+              </div>
+              <div class="item">
+                <div class="title">Remoções de Longa Distância</div>
+                <div class="description">
+                  Cobertura nacional com estrutura adequada para trajetos
+                  extensos
+                </div>
               </div>
             </div>
-          </div>
-          <div class="service-item">
-            <div class="check">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 -960 960 960"
-                fill="#e3e3e3"
-              >
-                <path
-                  d="m424-312 282-282-56-56-226 226-114-114-56 56 170 170ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"
-                />
-              </svg>
-            </div>
-            <div class="item">
-              <div class="title">Cobertura de Eventos</div>
-              <div class="description">
-                Suporte médico especializado para eventos corporativos,
-                esportivos e sociais
+            <div class="service-item">
+              <div class="check">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 -960 960 960"
+                  fill="#e3e3e3"
+                >
+                  <path
+                    d="m424-312 282-282-56-56-226 226-114-114-56 56 170 170ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"
+                  />
+                </svg>
+              </div>
+              <div class="item">
+                <div class="title">Cobertura de Eventos</div>
+                <div class="description">
+                  Suporte médico especializado para eventos corporativos,
+                  esportivos e sociais
+                </div>
               </div>
             </div>
           </div>
