feat: structure title adjust

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
           </div>
 
           <div id="structure" class="section-block right">
-            <h2>Nossa equipe</h2>
+            <h2>Estrutura e tecnologia</h2>
             <div class="content-area">
               <div class="structure-item">
                 <div class="item">
