feat: section titles adjustments

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <!-- main content -->
         <main>
           <!-- hero section -->
-          <div id="hero" class="section-block">
+          <div id="hero" class="section-block right">
             <h2>Atendimento 24 horas</h2>
             <div class="content-area">
               <div class="contact-wrapper">
@@ -165,7 +165,7 @@
           </div>
 
           <!-- hero team -->
-          <div id="team" class="section-block right">
+          <div id="team" class="section-block">
             <h2>Nossa equipe</h2>
             <div class="content-area">
               <div class="card">
@@ -217,7 +217,7 @@
           </div>
 
           <!-- hero services -->
-          <div id="services" class="section-block">
+          <div id="services" class="section-block right">
             <h2>Serviços completos</h2>
             <div class="content-area">
               <div class="service-item">
@@ -259,7 +259,7 @@
             </div>
           </div>
 
-          <div id="structure" class="section-block right">
+          <div id="structure" class="section-block">
             <h2>Estrutura e tecnologia</h2>
             <div class="content-area">
               <div class="structure-item">
