feat: text adjustments

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             </a>
           </div>
           <div class="contact">
-            <h3>Vida Remoções 24h 3 Cuidando de quem mais importa: você.</h3>
+            <h3>Vida Remoções 24h - Cuidando de quem mais importa: você</h3>
             <p>
               Conte conosco em todos os momentos. Nossa missão é garantir que
               cada remoção seja realizada com responsabilidade, empatia e o mais
