feat: images gallery

--- a/index.html
+++ b/index.html
@@ -259,7 +259,51 @@
             </div>
           </div>
 
-          <div id="structure" class="section-block">
+          <div id="gallery" class="section-block">
+            <h2>Galeria</h2>
+            <div class="content-area">
+              <div class="gallery-wrapper">
+                <div class="photo">
+                  <img
+                    src="./assets/images/team_02.jpeg"
+                    alt="Vida Remoções - Galeria"
+                  />
+                </div>
+                <div class="photo">
+                  <img
+                    src="./assets/images/team_01.jpeg"
+                    alt="Vida Remoções - Galeria"
+                  />
+                </div>
+                <div class="photo">
+                  <img
+                    src="./assets/images/team_03.jpeg"
+                    alt="Vida Remoções - Galeria"
+                  />
+                </div>
+                <div class="photo">
+                  <img
+                    src="./assets/images/team_04.jpeg"
+                    alt="Vida Remoções - Galeria"
+                  />
+                </div>
+                <div class="photo">
+                  <img
+                    src="./assets/images/team_06.jpeg"
+                    alt="Vida Remoções - Galeria"
+                  />
+                </div>
+                <div class="photo">
+                  <img
+                    src="./assets/images/team_05.jpeg"
+                    alt="Vida Remoções - Galeria"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div id="structure" class="section-block right">
             <h2>Estrutura e tecnologia</h2>
             <div class="content-area">
               <div class="structure-item">
