feat: adjust whatsapp text

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <a
                   class="whatsapp"
                   target="_blank"
-                  href="https://api.whatsapp.com/send?phone=5511916943045&text='Olá venho do site Vida Remoções e gostaria de informações'"
+                  href="https://api.whatsapp.com/send?phone=5511916943045&text=Olá venho do site Vida Remoções e gostaria de informações"
                 >
                   <div class="button">
                     <div class="icon">
@@ -100,7 +100,7 @@
                 <a
                   class="whatsapp"
                   target="_blank"
-                  href="https://api.whatsapp.com/send?phone=5511911538153&text='Olá venho do site Vida Remoções e gostaria de informações'"
+                  href="https://api.whatsapp.com/send?phone=5511911538153&text=Olá venho do site Vida Remoções e gostaria de informações"
                 >
                   <div class="button">
                     <div class="icon">
@@ -378,7 +378,7 @@
             <a
               class="whatsapp"
               target="_blank"
-              href="https://api.whatsapp.com/send?phone=5511916943045&text='Olá venho do site Vida Remoções e gostaria de informações'"
+              href="https://api.whatsapp.com/send?phone=5511916943045&text=Olá venho do site Vida Remoções e gostaria de informações"
             >
               <div class="button">
                 <div class="icon">
@@ -400,7 +400,7 @@
             <a
               class="whatsapp"
               target="_blank"
-              href="https://api.whatsapp.com/send?phone=5511911538153&text='Olá venho do site Vida Remoções e gostaria de informações'"
+              href="https://api.whatsapp.com/send?phone=5511911538153&text=Olá venho do site Vida Remoções e gostaria de informações"
             >
               <div class="button">
                 <div class="icon">
@@ -445,7 +445,7 @@
       <a
         class="whatsapp"
         target="_blank"
-        href="https://api.whatsapp.com/send?phone=5511916943045&text='Olá venho do site Vida Remoções e gostaria de informações'"
+        href="https://api.whatsapp.com/send?phone=5511916943045&text=Olá venho do site Vida Remoções e gostaria de informações"
       >
         <svg
           fill="#000000"
